# PDFTranslator

./: .env.example  .gitignore  .gitmessage  .mcp.json  AGENTS.md  AudioGenerator.py  CHANGELOG.md  CHANGELOG_SPRINT_2.1.md  GlobalConfig.py  MainController.py  OutputGenerator.py  PDFAgent.py  PDFHandler.py  README.md  TextProcessor.py  Translator.py  VideoGenerator.py  app.py  baseline_test_results.txt  commitlint.config.js  config.json  create_sprint14_branch.sh  document_chapter_splitter.py  document_chapter_splitter_v2.py  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  sprint14_setup.sh  streamlit_app.py  update_imports.py
.codebase-memory/: adr.md
.playwright-mcp/: page-2026-07-04T00-29-17-937Z.yml  page-2026-07-04T00-29-26-114Z.yml  page-2026-07-04T00-44-30-053Z.yml  page-2026-07-04T01-20-32-160Z.yml
Docker/: .env.example  01_extensions.sql  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  elk-init.sh  env.example  loki-config.yaml  nginx.conf  promtail-config.yaml  proxy.conf.prod.json  start-elk.sh
Docker/filebeat/: filebeat.yml
Docker/logstash/: logstash.conf
LLM/: APIClient.py  BaseLLMClient.py  GeminiAI.py  NvidiaAI.py  OllamaAI.py  TogetherAI.py  llm_service.py
PDFv1/: FileFinder.py  TextExtractor.py  Translator.py
PDFv2/: CommonPrompts.py  __init__.py
Tools/: FileProcessor.py  Grammar.py  SupabaseWraper.py
backend/: main.py
cli/: app.py
cli/commands/: __init__.py  add_to_database.py  build_glossary.py  process.py  reset_database.py  split_text.py  translate_chapter.py
cli/services/: glossary_post_processor.py
cli/ui/: __init__.py  display.py  selection.py
config/: __init__.py  database.py  document.py  llm.py  settings.py
data/: glossary.db  translation.db-shm  translation.db-wal  translator.db
database/: __init__.py  connection.py  models.py
database/repositories/: __init__.py  book_repository.py  chapter_repository.py  entity_blacklist_repository.py  fantasy_term_repository.py  glossary_repository.py  volume_repository.py
database/schemas/: 005_glossary.sql  006_chapters_nullable_number.sql  008_entity_blacklist.sql  009_fantasy_terms.sql
database/services/: __init__.py  entity_extractor.py  glossary_manager.py  vector_store.py
docs/: MICROSERVICES_CUPID_PROPOSAL.md  MICROSERVICES_PROPOSAL.md  RUNBOOK.md  WORK_PLAN_CUPID.md  WORK_PLAN_CUPID_MICROSERVICES.md  architecture.md  docling-integration.md  file-upload-api-examples.md  postman_collection.json  token-chunking-configuration.md
docs/plans/: 2025-04-04-docling-integration-design.md  2025-04-04-docling-integration-implementation.md  2025-04-10-python-modern-structure-design.md  2025-04-12-remove-language-selection-files-design.md  2025-04-12-remove-language-selection-files.md  2025-04-17-glossary-resume-implementation.md  2025-04-17-glossary-resume-system-design.md  2026-03-17-nvidia-ai-connector-design.md  2026-03-17-nvidia-ai-connector-impl.md  2026-03-17-remove-config-json-dependency-design.md  2026-03-17-remove-config-json-dependency-impl.md  2026-03-17-simplify-text-extractor-design.md  2026-03-17-simplify-text-extractor-impl.md  2026-03-18-consolidate-dependencies.md  2026-03-18-naming-refactoring-design.md  2026-03-18-naming-refactoring-impl.md  2026-03-18-typer-rich-migration-design.md  2026-03-18-typer-rich-migration.md  2026-03-19-add-to-database-enhancement-design.md  2026-03-19-auto-init-database-design.md  2026-03-19-centralize-connection-pool-design.md  2026-03-20-split-text-block-parsing-design.md  2026-03-20-split-text-block-parsing.md  2026-03-20-split-text-command-design.md  2026-03-20-split-text.md  2026-03-20-volume-repository-design.md  2026-03-20-volume-repository-implementation.md  2026-03-21-build-glossary-command-design.md  (+21 more)
frontend/: README.md  package-lock.json  package.json
llm/: GeminiAI.py  NvidiaAI.py  OllamaAI.py  base_llm.py  gemini_llm.py  nvidia_llm.py  ollama_llm.py
mistral-large-3-675b-instruct-2512/: chat_template.jinja  special_tokens_map.json  tokenizer_config.json
models/: __init__.py
scripts/: changelog-update.sh  refactor_metrics.sh  run_migration.py  sprint12_changelog.sh
services/: __init__.py  glossary_translator.py  translator.py
services/audio/: Cargo.toml
services/audio/src/: engine.rs  main.rs  normalize.rs  pipeline.rs
src/: __init__.py
src/pdftranslator/services/catalog/: Dockerfile  README.md  main.py  pyproject.toml
src/pdftranslator/services/catalog/api/: __init__.py  dependencies.py
src/pdftranslator/services/catalog/api/routes/: __init__.py  chapters.py  volumes.py  works.py
src/pdftranslator/services/catalog/api/schemas/: __init__.py  chapter.py  volume.py  work.py
src/pdftranslator/services/catalog/config/: __init__.py  settings.py
src/pdftranslator/services/catalog/domain/: __init__.py
src/pdftranslator/services/catalog/domain/models/: __init__.py  chapter.py  volume.py  work.py
src/pdftranslator/services/catalog/domain/repositories/: __init__.py  exceptions.py  protocols.py
src/pdftranslator/services/catalog/domain/services/: __init__.py  catalog_service.py
src/pdftranslator/services/catalog/infrastructure/: __init__.py
src/pdftranslator/services/catalog/infrastructure/database/: __init__.py  connection.py  repositories.py
src/pdftranslator/services/catalog/infrastructure/database/migrations/: 001_catalog_schema.sql
src/pdftranslator/services/catalog/tests/: __init__.py
src/pdftranslator/services/catalog/tests/contract/: test_catalog_pact.py
src/pdftranslator/services/catalog/tests/unit/: __init__.py  test_chapter_model.py  test_volume_model.py  test_work_model.py
tests/: conftest.py  test_document_chapter_splitter_v2.py  test_integration_docling.py  test_no_config_json.py  test_nvidia_ai.py  test_section_classifier_enhanced.py  test_section_classifier_integration.py  test_simplified_text_extractor.py
tools/: AudioGenerator.py  DocumentTextExtractor.py  FileFinder.py  GeminiTextToSpeech.py  ORModels.py  TextExtractor.py  Translator.py  VideoGenerator.py  translation_prompt.txt  translation_prompt_glossary.txt
(+517 files in other folders)
